# token-monitor

./: .gitignore  LICENSE  README.md  index.html  package.json
.github/workflows/: release.yml
public/: control.html  overlay.html  test-provider.html
src/: main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: aliyun-remote.json  app-windows.json  baidu-remote.json  chinamobile-remote.json  volcengine-remote.json
src-tauri/icons/: icon.icns
src-tauri/src/: macos_tray.rs  main.rs  overlay.rs  tray.rs  window.rs  windows_taskbar.rs
src-tauri/src/providers/: aliyun.rs  baidu.rs  chinamobile.rs  mod.rs  volcengine.rs
